--- a/singolo1.html
+++ b/singolo1.html
@@ -13,7 +13,7 @@
 <body>
     <header class="header-body">
         <div class="container header-wrapper">
-            <h1 class="caption">SINGOLO</h1>
+
             <div class="header-body__logo">
                 <span><a href="#">SINGOLO</a>*</span>
             </div>
@@ -24,12 +24,20 @@
                     <li class="header-body__nav__item"><a href="#">PORTFOLIO</a></li>
                     <li class="header-body__nav__item"><a href="#">ABOUT</a></li>
                     <li class="header-body__nav__item"><a href="#">CONTACT</a></li>
-                </nav>
-            </div>
+            </nav>
         </div>
     </header>
     <main>
-
+        <section class="slider-body">
+            <div class="container">
+                <div class="slider-wrapper">
+                    <div class="slider-body__back"></div>
+                    <div class="slider-body__iphone_vertical"></div>
+                    <div class="slider-body__iphone_horizontal"></div>
+                    <div class="slider-body__next"></div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 
