feat: put together 3 parts singolo

--- a/singolo3.html
+++ b/singolo3.html
@@ -10,7 +10,7 @@
     <title>Singolo</title>
 </head>
 
-<footer>
+<body>
     <footer>
         <div class="footer-body">
             <div class="wrapper">
@@ -61,4 +61,4 @@
             </div>
         </div>
     </footer>
-</footer>
+</body>
