fix: add caption

--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <title>Singolo</title>
 </head>
+
 <body>
     <header class="header-body">
         <div class="container header-wrapper">
-
+            <h1 class="caption">SINGOLO</h1>
             <div class="header-body__logo">
                 <span><a href="#">SINGOLO</a>*</span>
             </div>
@@ -39,55 +40,61 @@
         </section>
         <section class="services-body">
             <div class="container">
-                    <p class="services-body__title">Our Services</p>
-                    <p class="services-body__section">Fusce dapibus, tellus ac cursus commodo, tortor
-                            mauris condimentum. Duis mollis, non commodo luctus, nisi erat porttitor
-                            ligula, eget lacinia odio sem nec elit. Fusce dapibus,
-                            tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
-                    <div class="services-wrapper">
-                        <div class="services-body__item">
-                            <img class="services-body__item-logo" src="assets/images/pen.png">
-                            <span class="services-body__item-text">
-                                <p class="services-body__item-caption">Custom Design</p>
-                                Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam laoreet, viverra lacus ut, ultrices velit.
-                            </span>
-                        </div>
-                        <div class="services-body__item">
-                            <img class="services-body__item-logo" src="assets/images/ellipse.png">
-                            <span class="services-body__item-text">
-                                <p class="services-body__item-caption">Inovative Ideas</p>
-                                Quisque luctus, quam eget molestie commodo, lacus purus cursus purus, nec rutrum tellus dolor id lorem.
-                            </span>
-                        </div>
-                        <div class="services-body__item">
-                            <img class="services-body__item-logo" src="assets/images/heart.png">
-                            <span class="services-body__item-text">
-                                <p class="services-body__item-caption">Love Is The Answer</p>
-                                Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et consequat felis. Quisque condimentum.
-                            </span>
-                        </div>
-                        <div class="services-body__item">
-                            <img class="services-body__item-logo" src="assets/images/phone.png">
-                            <span class="services-body__item-text">
-                                <p class="services-body__item-caption">Responsive Layout</p>
-                                Sed porttitor placerat rhoncus. In at nunc tellus. Maecenas blandit nunc ligula. Praesent elit leo.
-                            </span>
-                        </div>
-                        <div class="services-body__item">
-                            <img class="services-body__item-logo" src="assets/images/bubble.png">
-                            <span class="services-body__item-text">
-                                <p class="services-body__item-caption">24 / 7 Support</p>
-                                Vivamus vel quam lacinia, tincidunt dui non, vehicula nisi. Nulla a sem erat. Pellentesque egestas venenatis lorem .
-                            </span>
-                        </div>
-                        <div class="services-body__item">
-                            <img class="services-body__item-logo" src="assets/images/star.png">
-                            <span class="services-body__item-text">
-                                <p class="services-body__item-caption">Feel Like A Star</p>
-                                Quisque hendrerit purus dapibus, ornare nibh vitae, viverra nibh. Fusce vitae aliquam tellus.
-                            </span>
-                        </div>
+                <p class="services-body__title">Our Services</p>
+                <p class="services-body__section">Fusce dapibus, tellus ac cursus commodo, tortor
+                    mauris condimentum. Duis mollis, non commodo luctus, nisi erat porttitor
+                    ligula, eget lacinia odio sem nec elit. Fusce dapibus,
+                    tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
+                <div class="services-wrapper">
+                    <div class="services-body__item">
+                        <img class="services-body__item-logo" src="assets/images/pen.png">
+                        <span class="services-body__item-text">
+                            <p class="services-body__item-caption">Custom Design</p>
+                            Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam laoreet, viverra lacus ut,
+                            ultrices velit.
+                        </span>
                     </div>
+                    <div class="services-body__item">
+                        <img class="services-body__item-logo" src="assets/images/ellipse.png">
+                        <span class="services-body__item-text">
+                            <p class="services-body__item-caption">Inovative Ideas</p>
+                            Quisque luctus, quam eget molestie commodo, lacus purus cursus purus, nec rutrum tellus
+                            dolor id lorem.
+                        </span>
+                    </div>
+                    <div class="services-body__item">
+                        <img class="services-body__item-logo" src="assets/images/heart.png">
+                        <span class="services-body__item-text">
+                            <p class="services-body__item-caption">Love Is The Answer</p>
+                            Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et consequat felis.
+                            Quisque condimentum.
+                        </span>
+                    </div>
+                    <div class="services-body__item">
+                        <img class="services-body__item-logo" src="assets/images/phone.png">
+                        <span class="services-body__item-text">
+                            <p class="services-body__item-caption">Responsive Layout</p>
+                            Sed porttitor placerat rhoncus. In at nunc tellus. Maecenas blandit nunc ligula. Praesent
+                            elit leo.
+                        </span>
+                    </div>
+                    <div class="services-body__item">
+                        <img class="services-body__item-logo" src="assets/images/bubble.png">
+                        <span class="services-body__item-text">
+                            <p class="services-body__item-caption">24 / 7 Support</p>
+                            Vivamus vel quam lacinia, tincidunt dui non, vehicula nisi. Nulla a sem erat. Pellentesque
+                            egestas venenatis lorem .
+                        </span>
+                    </div>
+                    <div class="services-body__item">
+                        <img class="services-body__item-logo" src="assets/images/star.png">
+                        <span class="services-body__item-text">
+                            <p class="services-body__item-caption">Feel Like A Star</p>
+                            Quisque hendrerit purus dapibus, ornare nibh vitae, viverra nibh. Fusce vitae aliquam
+                            tellus.
+                        </span>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
@@ -135,43 +142,45 @@
                     </span>
                 </div>
             </div>
-                <div class="about-us__employees">
-                    <div class="about-us__person">
-                        <img class="about-us__img" src="assets/images/photo1.png">
-                        <span class="about-us__name">Adam Jensen</span>
-                        <span class="about-us__info">Quisque luctus, quam eget molestie commodo, lacus purus cursus
-                            purus, nec rutrum tellus dolor id lorem.</span>
-                        <div class="about-us__share">
-                            <img class="about-us__link" src="assets/images/facebook.png">
-                            <img class="about-us__link" src="assets/images/google.png">
-                            <img class="about-us__link" src="assets/images/twitter.png">
-                            <img class="about-us__link" src="assets/images/in.png">
-                        </div>
+            <div class="about-us__employees">
+                <div class="about-us__person">
+                    <img class="about-us__img" src="assets/images/photo1.png">
+                    <span class="about-us__name">Adam Jensen</span>
+                    <span class="about-us__info">Quisque luctus, quam eget molestie commodo, lacus purus cursus
+                        purus, nec rutrum tellus dolor id lorem.</span>
+                    <div class="about-us__share">
+                        <img class="about-us__link" src="assets/images/facebook.png">
+                        <img class="about-us__link" src="assets/images/google.png">
+                        <img class="about-us__link" src="assets/images/twitter.png">
+                        <img class="about-us__link" src="assets/images/in.png">
                     </div>
-                    <div class="about-us__person">
-                        <img class="about-us__img" src="assets/images/photo2.png">
-                        <span class="about-us__name">Desmond Miles</span>
-                        <span class="about-us__info">Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam laoreet, viverra lacus ut, ultrices velit.</span>
-                        <div class="about-us__share">
-                            <img class="about-us__link" src="assets/images/facebook.png">
-                            <img class="about-us__link" src="assets/images/google.png">
-                            <img class="about-us__link" src="assets/images/twitter.png">
-                            <img class="about-us__link" src="assets/images/in.png">
-                        </div>
+                </div>
+                <div class="about-us__person">
+                    <img class="about-us__img" src="assets/images/photo2.png">
+                    <span class="about-us__name">Desmond Miles</span>
+                    <span class="about-us__info">Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam
+                        laoreet, viverra lacus ut, ultrices velit.</span>
+                    <div class="about-us__share">
+                        <img class="about-us__link" src="assets/images/facebook.png">
+                        <img class="about-us__link" src="assets/images/google.png">
+                        <img class="about-us__link" src="assets/images/twitter.png">
+                        <img class="about-us__link" src="assets/images/in.png">
                     </div>
-                    <div class="about-us__person">
-                        <img class="about-us__img" src="assets/images/photo3.png">
-                        <span class="about-us__name">Scolara Visari</span>
-                        <span class="about-us__info">Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et consequat felis. Quisque condimentum.</span>
-                        <div class="about-us__share">
-                            <img class="about-us__link" src="assets/images/facebook.png">
-                            <img class="about-us__link" src="assets/images/google.png">
-                            <img class="about-us__link" src="assets/images/twitter.png">
-                            <img class="about-us__link" src="assets/images/in.png">
-                        </div>
+                </div>
+                <div class="about-us__person">
+                    <img class="about-us__img" src="assets/images/photo3.png">
+                    <span class="about-us__name">Scolara Visari</span>
+                    <span class="about-us__info">Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et
+                        consequat felis. Quisque condimentum.</span>
+                    <div class="about-us__share">
+                        <img class="about-us__link" src="assets/images/facebook.png">
+                        <img class="about-us__link" src="assets/images/google.png">
+                        <img class="about-us__link" src="assets/images/twitter.png">
+                        <img class="about-us__link" src="assets/images/in.png">
                     </div>
                 </div>
             </div>
+        </div>
     </section>
     <footer>
         <div class="footer-body">
@@ -191,7 +200,8 @@
                                 <input required type="text" placeholder="Email (Required)">
                                 <input type="text" placeholder="Subject">
                                 <textarea>Describe your project in detail...</textarea>
-                                <input class="button_sub" type="submit" value="Submit" onclick="alert('Форма отправлена!')">
+                                <input class="button_sub" type="submit" value="Submit"
+                                    onclick="alert('Форма отправлена!')">
                             </div>
                         </form>
                     </div>
@@ -203,8 +213,10 @@
                             Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et consequat felis.
                         </div>
                         <p><img width="7" height="11" src="assets/images/location.png"> Elm St. 14/05 Lost City</p>
-                        <p><img width="11" height="11" src="assets/images/phoneContacts.png"><a href="tel:03528 331 86 35">03528 331 86 35</a></p>
-                        <p><img width="13" height="8" src="assets/images/mail.png"><a href="mailto:info@singolo.com">info@singolo.com</a></p>
+                        <p><img width="11" height="11" src="assets/images/phoneContacts.png"><a
+                                href="tel:03528 331 86 35">03528 331 86 35</a></p>
+                        <p><img width="13" height="8" src="assets/images/mail.png"><a
+                                href="mailto:info@singolo.com">info@singolo.com</a></p>
                     </div>
                 </div>
             </div>
@@ -224,4 +236,5 @@
         </div>
     </footer>
 </body>
+
 </html>
