--- a/singolo1.html
+++ b/singolo1.html
@@ -13,7 +13,7 @@
 <body>
     <header class="header-body">
         <div class="container header-wrapper">
-
+            <h1 class="caption">SINGOLO</h1>
             <div class="header-body__logo">
                 <span><a href="#">SINGOLO</a>*</span>
             </div>
@@ -40,55 +40,61 @@
         </section>
         <section class="services-body">
             <div class="container">
-                    <p class="services-body__title">Our Services</p>
-                    <p class="services-body__section">Fusce dapibus, tellus ac cursus commodo, tortor
-                            mauris condimentum. Duis mollis, non commodo luctus, nisi erat porttitor
-                            ligula, eget lacinia odio sem nec elit. Fusce dapibus,
-                            tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
-                    <div class="services-wrapper">
-                        <div class="services-body__item">
-                            <img class="services-body__item-logo" src="assets/images/pen.png">
-                            <span class="services-body__item-text">
-                                <p class="services-body__item-caption">Custom Design</p>
-                                Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam laoreet, viverra lacus ut, ultrices velit.
-                            </span>
-                        </div>
-                        <div class="services-body__item">
-                            <img class="services-body__item-logo" src="assets/images/ellipse.png">
-                            <span class="services-body__item-text">
-                                <p class="services-body__item-caption">Inovative Ideas</p>
-                                Quisque luctus, quam eget molestie commodo, lacus purus cursus purus, nec rutrum tellus dolor id lorem.
-                            </span>
-                        </div>
-                        <div class="services-body__item">
-                            <img class="services-body__item-logo" src="assets/images/heart.png">
-                            <span class="services-body__item-text">
-                                <p class="services-body__item-caption">Love Is The Answer</p>
-                                Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et consequat felis. Quisque condimentum.
-                            </span>
-                        </div>
-                        <div class="services-body__item">
-                            <img class="services-body__item-logo" src="assets/images/phone.png">
-                            <span class="services-body__item-text">
-                                <p class="services-body__item-caption">Responsive Layout</p>
-                                Sed porttitor placerat rhoncus. In at nunc tellus. Maecenas blandit nunc ligula. Praesent elit leo.
-                            </span>
-                        </div>
-                        <div class="services-body__item">
-                            <img class="services-body__item-logo" src="assets/images/bubble.png">
-                            <span class="services-body__item-text">
-                                <p class="services-body__item-caption">24 / 7 Support</p>
-                                Vivamus vel quam lacinia, tincidunt dui non, vehicula nisi. Nulla a sem erat. Pellentesque egestas venenatis lorem .
-                            </span>
-                        </div>
-                        <div class="services-body__item">
-                            <img class="services-body__item-logo" src="assets/images/star.png">
-                            <span class="services-body__item-text">
-                                <p class="services-body__item-caption">Feel Like A Star</p>
-                                Quisque hendrerit purus dapibus, ornare nibh vitae, viverra nibh. Fusce vitae aliquam tellus.
-                            </span>
-                        </div>
+                <p class="services-body__title">Our Services</p>
+                <p class="services-body__section">Fusce dapibus, tellus ac cursus commodo, tortor
+                    mauris condimentum. Duis mollis, non commodo luctus, nisi erat porttitor
+                    ligula, eget lacinia odio sem nec elit. Fusce dapibus,
+                    tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
+                <div class="services-wrapper">
+                    <div class="services-body__item">
+                        <img class="services-body__item-logo" src="assets/images/pen.png">
+                        <span class="services-body__item-text">
+                            <p class="services-body__item-caption">Custom Design</p>
+                            Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam laoreet, viverra lacus ut,
+                            ultrices velit.
+                        </span>
                     </div>
+                    <div class="services-body__item">
+                        <img class="services-body__item-logo" src="assets/images/ellipse.png">
+                        <span class="services-body__item-text">
+                            <p class="services-body__item-caption">Inovative Ideas</p>
+                            Quisque luctus, quam eget molestie commodo, lacus purus cursus purus, nec rutrum tellus
+                            dolor id lorem.
+                        </span>
+                    </div>
+                    <div class="services-body__item">
+                        <img class="services-body__item-logo" src="assets/images/heart.png">
+                        <span class="services-body__item-text">
+                            <p class="services-body__item-caption">Love Is The Answer</p>
+                            Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et consequat felis.
+                            Quisque condimentum.
+                        </span>
+                    </div>
+                    <div class="services-body__item">
+                        <img class="services-body__item-logo" src="assets/images/phone.png">
+                        <span class="services-body__item-text">
+                            <p class="services-body__item-caption">Responsive Layout</p>
+                            Sed porttitor placerat rhoncus. In at nunc tellus. Maecenas blandit nunc ligula. Praesent
+                            elit leo.
+                        </span>
+                    </div>
+                    <div class="services-body__item">
+                        <img class="services-body__item-logo" src="assets/images/bubble.png">
+                        <span class="services-body__item-text">
+                            <p class="services-body__item-caption">24 / 7 Support</p>
+                            Vivamus vel quam lacinia, tincidunt dui non, vehicula nisi. Nulla a sem erat. Pellentesque
+                            egestas venenatis lorem .
+                        </span>
+                    </div>
+                    <div class="services-body__item">
+                        <img class="services-body__item-logo" src="assets/images/star.png">
+                        <span class="services-body__item-text">
+                            <p class="services-body__item-caption">Feel Like A Star</p>
+                            Quisque hendrerit purus dapibus, ornare nibh vitae, viverra nibh. Fusce vitae aliquam
+                            tellus.
+                        </span>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
