--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                 </div>
                 <div class="footer-body__main">
                     <div class="footer-body__form">
-                        <form onsubmit="showMessage()">
+                        <form id="contactForm" onsubmit="showMessage()">
                             <div class="footer-body__inputs">
                                 <input id="name" required type="text" placeholder="Name (Required)" maxlength="20">
                                 <input id="mail" required type="email" placeholder="Email (Required)" maxlength="30">
