--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <title>Singolo</title>
 </head>
 
-<body>
-    <header id="home" class="header-body">
+<body id="container-anchor">
+    <header id="home" class="header-body anchor-scroll">
         <div class="container header-wrapper">
             <h1 class="caption">SINGOLO</h1>
             <div class="header-body__logo">
@@ -54,7 +54,7 @@
                 </div>
             </div>
         </section>
-        <section class="services-body">
+        <section id="services-scroll" class="services-body anchor-scroll">
             <a id="services" class="anchor"></a>
             <div class="container">
                 <p class="services-body__title">Our Services</p>
@@ -115,7 +115,7 @@
             </div>
         </section>
     </main>
-    <section class="portfolio">
+    <section id="portfolio-scroll" class="portfolio anchor-scroll">
         <a id="portfolio" class="anchor"></a>
         <div class="wrapper">
             <div class="section-header">
@@ -148,7 +148,7 @@
             </div>
         </div>
     </section>
-    <section class="about-us">
+    <section id="about-scroll" class="about-us anchor-scroll">
         <a id="about" class="anchor"></a>
         <div class="wrapper">
             <div class="section-body">
@@ -202,7 +202,7 @@
         </div>
     </section>
     <footer>
-        <div id="contact" class="footer-body">
+        <div id="contact" class="footer-body anchor-scroll">
             <div class="wrapper">
                 <div class="footer-body__title">Get a Quote</div>
                 <div class="footer-body__text">
