fix: slider carousel

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
         <section id="slider-bg" class="slider-body">
             <div class="container">
                 <div class="slider-wrapper">
-                    <div id="back" class="slider-body__back""></div>
+                    <div id="back" class="slider-body__back btn""></div>
                     <div id="slider_mobile" class="slider">
-                        <div class="slide">
+                        <div id="lastClone" class="slide">
                             <div class="slider-body__iphone_vertical">
                                 <div id="screenV" class="screen_vertical"></div>
                                 <div id="buttonV" class="button_vertical"></div>
@@ -49,8 +49,24 @@
                                 <div id="buttonV2" class="button_vertical2"></div>
                             </div>
                         </div>
+                        <div class="slide">
+                            <div class="slider-body__iphone_vertical">
+                                <div id="screenV" class="screen_vertical"></div>
+                                <div id="buttonV" class="button_vertical"></div>
+                            </div>
+                            <div class="slider-body__iphone_horizontal">
+                                <div id="buttonH" class="button_horizontal"></div>
+                                <div id="screenH" class="screen_horizontal"></div>
+                            </div>
+                        </div>
+                        <div id="firstClone" class="slide">
+                            <div class="slider-body__slide-2">
+                                <div id="screenV2" class="screen_vertical2"></div> 
+                                <div id="buttonV2" class="button_vertical2"></div>
+                            </div>
+                        </div>
                     </div>
-                    <div id="next" class="slider-body__next"></div>
+                    <div id="next" class="slider-body__next btn"></div>
                 </div>
             </div>
         </section>
