--- a/index.html
+++ b/index.html
@@ -33,37 +33,23 @@
                 <div class="slider-wrapper">
                     <div id="back" class="slider-body__back btn""></div>
                     <div id="slider_mobile" class="slider">
-                        <div id="lastClone" class="slide">
-                            <div class="slider-body__iphone_vertical">
-                                <div id="screenV" class="screen_vertical"></div>
-                                <div id="buttonV" class="button_vertical"></div>
+                        <div class="item-slide">
+                            <div class="slide active">
+                                <div class="slider-body__iphone_vertical">
+                                    <div id="screenV" class="screen_vertical"></div>
+                                    <div id="buttonV" class="button_vertical"></div>
+                                </div>
+                                <div class="slider-body__iphone_horizontal">
+                                    <div id="buttonH" class="button_horizontal"></div>
+                                    <div id="screenH" class="screen_horizontal"></div>
+                                </div>
                             </div>
-                            <div class="slider-body__iphone_horizontal">
-                                <div id="buttonH" class="button_horizontal"></div>
-                                <div id="screenH" class="screen_horizontal"></div>
-                            </div>
-                        </div>
-                        <div class="slide">
-                            <div class="slider-body__slide-2">
-                                <div id="screenV2" class="screen_vertical2"></div> 
-                                <div id="buttonV2" class="button_vertical2"></div>
-                            </div>
-                        </div>
-                        <div class="slide">
-                            <div class="slider-body__iphone_vertical">
-                                <div id="screenV" class="screen_vertical"></div>
-                                <div id="buttonV" class="button_vertical"></div>
-                            </div>
-                            <div class="slider-body__iphone_horizontal">
-                                <div id="buttonH" class="button_horizontal"></div>
-                                <div id="screenH" class="screen_horizontal"></div>
-                            </div>
-                        </div>
-                        <div id="firstClone" class="slide">
-                            <div class="slider-body__slide-2">
-                                <div id="screenV2" class="screen_vertical2"></div> 
-                                <div id="buttonV2" class="button_vertical2"></div>
-                            </div>
+                            <div class="slide">
+                                <div class="slider-body__slide-2">
+                                    <div id="screenV2" class="screen_vertical2"></div>
+                                    <div id="buttonV2" class="button_vertical2"></div>
+                                </div>
+                            </div>                         
                         </div>
                     </div>
                     <div id="next" class="slider-body__next btn"></div>
@@ -148,18 +134,18 @@
                     <button class="portfolio__button" onclick="swipePortfolio()">Artwork</button>
                 </div>
                 <div id="swipePortfolio" class="portfolio__project">
-                    <img class="portfolio__img" src="assets/images/project1.png">
-                    <img class="portfolio__img" src="assets/images/project2.png">
-                    <img class="portfolio__img" src="assets/images/project3.png">
-                    <img class="portfolio__img" src="assets/images/project4.png">
-                    <img class="portfolio__img" src="assets/images/project5.png">
-                    <img class="portfolio__img" src="assets/images/project6.png">
-                    <img class="portfolio__img" src="assets/images/project7.png">
-                    <img class="portfolio__img" src="assets/images/project8.png">
-                    <img class="portfolio__img" src="assets/images/project9.png">
-                    <img class="portfolio__img" src="assets/images/project10.png">
-                    <img class="portfolio__img" src="assets/images/project11.png">
-                    <img class="portfolio__img" src="assets/images/project12.png">
+                    <img class="portfolio__img" width="220" height="187" src="assets/images/project1.png">
+                    <img class="portfolio__img" width="220" height="187" src="assets/images/project2.png">
+                    <img class="portfolio__img" width="220" height="187" src="assets/images/project3.png">
+                    <img class="portfolio__img" width="220" height="187" src="assets/images/project4.png">
+                    <img class="portfolio__img" width="220" height="187" src="assets/images/project5.png">
+                    <img class="portfolio__img" width="220" height="187" src="assets/images/project6.png">
+                    <img class="portfolio__img" width="220" height="187" src="assets/images/project7.png">
+                    <img class="portfolio__img" width="220" height="187" src="assets/images/project8.png">
+                    <img class="portfolio__img" width="220" height="187" src="assets/images/project9.png">
+                    <img class="portfolio__img" width="220" height="187" src="assets/images/project10.png">
+                    <img class="portfolio__img" width="220" height="187" src="assets/images/project11.png">
+                    <img class="portfolio__img" width="220" height="187" src="assets/images/project12.png">
                 </div>
             </div>
         </div>
@@ -179,7 +165,7 @@
             </div>
             <div class="about-us__employees">
                 <div class="about-us__person">
-                    <img class="about-us__img" src="assets/images/photo1.png">
+                    <img class="about-us__img" width="300" height="300" src="assets/images/photo1.png">
                     <span class="about-us__name">Adam Jensen</span>
                     <span class="about-us__info">Quisque luctus, quam eget molestie commodo, lacus purus cursus
                         purus, nec rutrum tellus dolor id lorem.</span>
@@ -191,7 +177,7 @@
                     </div>
                 </div>
                 <div class="about-us__person">
-                    <img class="about-us__img" src="assets/images/photo2.png">
+                    <img class="about-us__img" width="300" height="300" src="assets/images/photo2.png">
                     <span class="about-us__name">Desmond Miles</span>
                     <span class="about-us__info">Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam
                         laoreet, viverra lacus ut, ultrices velit.</span>
@@ -203,7 +189,7 @@
                     </div>
                 </div>
                 <div class="about-us__person">
-                    <img class="about-us__img" src="assets/images/photo3.png">
+                    <img class="about-us__img" width="300" height="300" src="assets/images/photo3.png">
                     <span class="about-us__name">Scolara Visari</span>
                     <span class="about-us__info">Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et
                         consequat felis. Quisque condimentum.</span>
@@ -234,7 +220,8 @@
                                 <input id="name" required type="text" placeholder="Name (Required)" maxlength="20">
                                 <input id="mail" required type="email" placeholder="Email (Required)" maxlength="30">
                                 <input id="subject" type="text" placeholder="Subject" maxlength="20">
-                                <textarea id="describe" maxlength="80" placeholder="Describe your project in detail..."></textarea>
+                                <textarea id="describe" maxlength="80"
+                                    placeholder="Describe your project in detail..."></textarea>
                                 <input id="subButton" class="button_sub" type="submit" value="Submit">
                             </div>
                         </form>
