feat: Responsive for 375px done

--- a/index.html
+++ b/index.html
@@ -11,6 +11,33 @@
 </head>
 
 <body id="container-anchor">
+    <div class="mobile-menu close" id="mobile-menu">
+		<div class="wrapperB" id="shadow"></div>
+		<div class="mobile__menu__header">
+			<div class="burger" id="hidden-burger">
+				<span></span>
+				<span></span>
+				<span></span>
+			</div>
+            <div class="header-body__logoB">
+                <span><a href="#home">SINGOLO</a>*</span>
+            </div>
+		</div>
+		<ul class="mobile__menu-links" id="mobile__menu-links">
+			<li><a href="#home" class="header-active" id="header-link">home</a></li>
+			<li><a href="#services" id="header-link">services</a></li>
+			<li><a href="#portfolio" id="header-link">portfolio</a></li>
+			<li><a href="#about" id="header-link">about</a> </li>
+			<li><a href="#contact" id="header-link">contact</a></li>
+		</ul>
+	</div>
+	<div class="header__mobile">
+		<div class="burger" id="burger">
+			<span></span>
+			<span></span>
+			<span></span>
+		</div>
+	</div>
     <header id="home" class="header-body anchor-scroll">
         <div class="container header-wrapper">
             <h1 class="caption">SINGOLO</h1>
